--- a/Week2/MDF1-wk2/MDF1-wk2/TableCellViewController.xib
+++ b/Week2/MDF1-wk2/MDF1-wk2/TableCellViewController.xib
@@ -31,19 +31,20 @@
 				<string key="IBProxiedObjectIdentifier">IBFirstResponder</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
-			<object class="IBUITableViewCell" id="803320309">
+			<object class="IBUITableViewCell" id="212681573">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIView" id="554142846">
-						<reference key="NSNextResponder" ref="803320309"/>
+					<object class="IBUIView" id="103036278">
+						<reference key="NSNextResponder" ref="212681573"/>
 						<int key="NSvFlags">256</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUILabel" id="1016612006">
-								<reference key="NSNextResponder" ref="554142846"/>
+							<object class="IBUILabel" id="619055000">
+								<reference key="NSNextResponder" ref="103036278"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{57, 11}, {42, 21}}</string>
-								<reference key="NSSuperview" ref="554142846"/>
+								<reference key="NSSuperview" ref="103036278"/>
+								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -73,8 +74,9 @@
 							</object>
 						</array>
 						<string key="NSFrameSize">{320, 43}</string>
-						<reference key="NSSuperview" ref="803320309"/>
-						<reference key="NSNextKeyView" ref="1016612006"/>
+						<reference key="NSSuperview" ref="212681573"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="619055000"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -89,10 +91,11 @@
 				</array>
 				<string key="NSFrameSize">{320, 44}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSNextKeyView" ref="554142846"/>
+				<reference key="NSWindow"/>
+				<reference key="NSNextKeyView" ref="103036278"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-				<reference key="IBUIContentView" ref="554142846"/>
+				<reference key="IBUIContentView" ref="103036278"/>
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -118,16 +121,16 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">4</int>
-						<reference key="object" ref="803320309"/>
+						<reference key="object" ref="212681573"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="1016612006"/>
+							<reference ref="619055000"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">15</int>
-						<reference key="object" ref="1016612006"/>
-						<reference key="parent" ref="803320309"/>
+						<reference key="object" ref="619055000"/>
+						<reference key="parent" ref="212681573"/>
 					</object>
 				</array>
 			</object>
@@ -144,9 +147,20 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">16</int>
+			<int key="maxID">17</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">TableCellViewController</string>
+					<string key="superclassName">UITableViewCell</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/TableCellViewController.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
