--- a/Week2/MDF1-wk2/MDF1-wk2/TableCellViewController.xib
+++ b/Week2/MDF1-wk2/MDF1-wk2/TableCellViewController.xib
@@ -31,20 +31,19 @@
 				<string key="IBProxiedObjectIdentifier">IBFirstResponder</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
-			<object class="IBUITableViewCell" id="212681573">
+			<object class="IBUITableViewCell" id="337113670">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIView" id="103036278">
-						<reference key="NSNextResponder" ref="212681573"/>
+					<object class="IBUIView" id="55758649">
+						<reference key="NSNextResponder" ref="337113670"/>
 						<int key="NSvFlags">256</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUILabel" id="619055000">
-								<reference key="NSNextResponder" ref="103036278"/>
+							<object class="IBUILabel" id="78655330">
+								<reference key="NSNextResponder" ref="55758649"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{57, 11}, {42, 21}}</string>
-								<reference key="NSSuperview" ref="103036278"/>
-								<reference key="NSWindow"/>
+								<reference key="NSSuperview" ref="55758649"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -74,9 +73,8 @@
 							</object>
 						</array>
 						<string key="NSFrameSize">{320, 43}</string>
-						<reference key="NSSuperview" ref="212681573"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="619055000"/>
+						<reference key="NSSuperview" ref="337113670"/>
+						<reference key="NSNextKeyView" ref="78655330"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -91,15 +89,23 @@
 				</array>
 				<string key="NSFrameSize">{320, 44}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="103036278"/>
+				<reference key="NSNextKeyView" ref="55758649"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-				<reference key="IBUIContentView" ref="103036278"/>
+				<reference key="IBUIContentView" ref="55758649"/>
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
-			<array class="NSMutableArray" key="connectionRecords"/>
+			<array class="NSMutableArray" key="connectionRecords">
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">myLabel</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="78655330"/>
+					</object>
+					<int key="connectionID">19</int>
+				</object>
+			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
 					<object class="IBObjectRecord">
@@ -121,16 +127,16 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">4</int>
-						<reference key="object" ref="212681573"/>
+						<reference key="object" ref="337113670"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="619055000"/>
+							<reference ref="78655330"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">15</int>
-						<reference key="object" ref="619055000"/>
-						<reference key="parent" ref="212681573"/>
+						<reference key="object" ref="78655330"/>
+						<reference key="parent" ref="337113670"/>
 					</object>
 				</array>
 			</object>
@@ -147,20 +153,9 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">17</int>
+			<int key="maxID">19</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">TableCellViewController</string>
-					<string key="superclassName">UITableViewCell</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/TableCellViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
