--- a/Week2/MDF1-wk2/MDF1-wk2/TableCellViewController.xib
+++ b/Week2/MDF1-wk2/MDF1-wk2/TableCellViewController.xib
@@ -31,20 +31,19 @@
 				<string key="IBProxiedObjectIdentifier">IBFirstResponder</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
-			<object class="IBUITableViewCell" id="500866480">
+			<object class="IBUITableViewCell" id="275245229">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIView" id="19026633">
-						<reference key="NSNextResponder" ref="500866480"/>
+					<object class="IBUIView" id="756543792">
+						<reference key="NSNextResponder" ref="275245229"/>
 						<int key="NSvFlags">256</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUILabel" id="431238914">
-								<reference key="NSNextResponder" ref="19026633"/>
+							<object class="IBUILabel" id="949027576">
+								<reference key="NSNextResponder" ref="756543792"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{57, 11}, {42, 21}}</string>
-								<reference key="NSSuperview" ref="19026633"/>
-								<reference key="NSWindow"/>
+								<string key="NSFrame">{{40, 0}, {280, 43}}</string>
+								<reference key="NSSuperview" ref="756543792"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -64,19 +63,18 @@
 								<float key="IBUIMinimumFontSize">10</float>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
 									<int key="type">1</int>
-									<double key="pointSize">17</double>
+									<double key="pointSize">20</double>
 								</object>
 								<object class="NSFont" key="IBUIFont">
 									<string key="NSName">Helvetica</string>
-									<double key="NSSize">17</double>
+									<double key="NSSize">20</double>
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
 						</array>
 						<string key="NSFrameSize">{320, 43}</string>
-						<reference key="NSSuperview" ref="500866480"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="431238914"/>
+						<reference key="NSSuperview" ref="275245229"/>
+						<reference key="NSNextKeyView" ref="949027576"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -91,11 +89,10 @@
 				</array>
 				<string key="NSFrameSize">{320, 44}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="19026633"/>
+				<reference key="NSNextKeyView" ref="756543792"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-				<reference key="IBUIContentView" ref="19026633"/>
+				<reference key="IBUIContentView" ref="756543792"/>
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -103,8 +100,8 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">myLabel</string>
-						<reference key="source" ref="500866480"/>
-						<reference key="destination" ref="431238914"/>
+						<reference key="source" ref="275245229"/>
+						<reference key="destination" ref="949027576"/>
 					</object>
 					<int key="connectionID">20</int>
 				</object>
@@ -130,16 +127,16 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">4</int>
-						<reference key="object" ref="500866480"/>
+						<reference key="object" ref="275245229"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="431238914"/>
+							<reference ref="949027576"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">15</int>
-						<reference key="object" ref="431238914"/>
-						<reference key="parent" ref="500866480"/>
+						<reference key="object" ref="949027576"/>
+						<reference key="parent" ref="275245229"/>
 					</object>
 				</array>
 			</object>
@@ -157,29 +154,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">20</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">TableCellViewController</string>
-					<string key="superclassName">UITableViewCell</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">myLabel</string>
-						<string key="NS.object.0">UILabel</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">myLabel</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
-							<string key="name">myLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/TableCellViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
