pin Annotation added to map for location

--- a/Week3/MDF1-wk3/MDF1-wk3/businessInfoViewViewController.xib
+++ b/Week3/MDF1-wk3/MDF1-wk3/businessInfoViewViewController.xib
@@ -36,10 +36,10 @@
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">274</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBMKMapView" id="888681488">
+					<object class="IBMKMapView" id="49589273">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrame">{{0, 49}, {320, 267}}</string>
+						<string key="NSFrameSize">{320, 267}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -48,10 +48,10 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBMKMapType">2</int>
 					</object>
-					<object class="IBUILabel" id="725055970">
+					<object class="IBUILabel" id="1046488443">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{20, 338}, {280, 27}}</string>
+						<string key="NSFrame">{{20, 275}, {280, 27}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -61,7 +61,7 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">Label</string>
-						<object class="NSColor" key="IBUITextColor" id="295813997">
+						<object class="NSColor" key="IBUITextColor" id="998229510">
 							<int key="NSColorSpace">1</int>
 							<bytes key="NSRGB">MCAwIDAAA</bytes>
 						</object>
@@ -69,20 +69,20 @@
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUITextAlignment">1</int>
-						<object class="IBUIFontDescription" key="IBUIFontDescription" id="477326497">
+						<object class="IBUIFontDescription" key="IBUIFontDescription" id="521453310">
 							<int key="type">1</int>
 							<double key="pointSize">17</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="613385876">
+						<object class="NSFont" key="IBUIFont" id="635466154">
 							<string key="NSName">Helvetica</string>
 							<double key="NSSize">17</double>
 							<int key="NSfFlags">16</int>
 						</object>
 					</object>
-					<object class="IBUILabel" id="861722432">
+					<object class="IBUILabel" id="1055109928">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{20, 338}, {280, 76}}</string>
+						<string key="NSFrame">{{20, 291}, {280, 76}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -92,14 +92,14 @@
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<string key="IBUIText">Business Info</string>
-						<reference key="IBUITextColor" ref="295813997"/>
+						<reference key="IBUITextColor" ref="998229510"/>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<float key="IBUIMinimumFontSize">10</float>
 						<int key="IBUINumberOfLines">3</int>
 						<int key="IBUITextAlignment">1</int>
-						<reference key="IBUIFontDescription" ref="477326497"/>
-						<reference key="IBUIFont" ref="613385876"/>
+						<reference key="IBUIFontDescription" ref="521453310"/>
+						<reference key="IBUIFont" ref="635466154"/>
 					</object>
 				</array>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
@@ -130,14 +130,14 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">mapView</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="888681488"/>
+						<reference key="destination" ref="49589273"/>
 					</object>
 					<int key="connectionID">8</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">delegate</string>
-						<reference key="source" ref="888681488"/>
+						<reference key="source" ref="49589273"/>
 						<reference key="destination" ref="372490531"/>
 					</object>
 					<int key="connectionID">7</int>
@@ -155,9 +155,9 @@
 						<int key="objectID">1</int>
 						<reference key="object" ref="191373211"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="861722432"/>
-							<reference ref="725055970"/>
-							<reference ref="888681488"/>
+							<reference ref="49589273"/>
+							<reference ref="1046488443"/>
+							<reference ref="1055109928"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -174,17 +174,17 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">4</int>
-						<reference key="object" ref="888681488"/>
+						<reference key="object" ref="49589273"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">5</int>
-						<reference key="object" ref="725055970"/>
+						<reference key="object" ref="1046488443"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">6</int>
-						<reference key="object" ref="861722432"/>
+						<reference key="object" ref="1055109928"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 				</array>
